--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "chart.js": "^3.5.0",
+    "classnames": "^2.3.1",
     "next": "^10.0.0",
     "react": "17.0.1",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.3.1",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.4"
   }
 }
